--- a/.github/workflows/myjobboardapi.yml
+++ b/.github/workflows/myjobboardapi.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
     - master
+  workflow_dispatch:
+  
 env:
   AZURE_WEBAPP_NAME: myjobboardapi
   AZURE_WEBAPP_PACKAGE_PATH: MyJobBoard.Web.Host/publish
