Setup connectionStrings Conf for dev/prod env

--- a/MyJobBoard.Web.Host/appsettings.json
+++ b/MyJobBoard.Web.Host/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Data Source=myjobboardapi-sql-server.database.windows.net,1433;Initial Catalog=myjobboardapi-database;User ID=myjobboardapi-sql-server-admin;Password=JGVOL63MWY3XDD47$"
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MyJobBoardDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
